# luacommander

./: .gitignore  BUILD.md  CMakeLists.txt  DESIGN  LICENSE  LICENSE.rtf  Makefile  README.md  VagrantProvision.sh  Vagrantfile  runtests.sh  test.lua
cmake/: FindLua.cmake  FindPCRE.cmake
docker/: Dockerfile  build.sh
regex/: algo.h
src/: boot.lua  config.lua.in  header.lua  main.c  main.lua
test/testmodule/: init.lua  tm.lua
tools/: combiner.lua
vagrantconf/: Provision.CentOS.sh  Vagrantfile.CentOS56.i386  Vagrantfile.CentOS56.x86_64
